src/test/deca/syntax/invalid/synt/if_without_brace.deca
// @expected_output deca:9:8:
/*
    Description : Test sur un if sans accolades
    
    Résultat : rejeté à l'analyse syntaxique
*/
{
    if (true)
        println("Test échoué !");
]
